@@ -180,4 +180,4 @@ HOOKS
 Entering GSL mode calls with no arguments the value of the variable
 `gsl-mode-hook', if that value exists and is not nil; see the `Hooks'
 section of the Elisp manual for details.</pre>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Fri Jan  9 17:06:05 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Fri Jun 12 13:42:39 2009</div></body></html>
